Fix mobile and desktop menus conflict - both were opening on first page load on mobile

--- a/src/components/Header/styles.module.less
+++ b/src/components/Header/styles.module.less
@@ -154,3 +154,15 @@
     display: none;
   }
 }
+
+.menuContentDesktop {
+  @media (max-width: @menuTransitionMaxWidthBreakpoint) {
+    display: none;
+  }
+}
+
+.menuContentMobile {
+  @media (min-width: @menuTransitionMinWidthBreakpoint) {
+    display: none;
+  }
+}
